<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.dunwu.javacore</groupId>
  <artifactId>javacore</artifactId>
  <version>1.0.1</version>
  <name>JavaCore</name>
  <packaging>pom</packaging>
  <description>JavaCore 经验总结</description>
  <url>https://github.com/dunwu/javacore</url>

  <modules>
    <module>codes/javacore-basics</module>
    <module>codes/javacore-oop</module>
    <module>codes/javacore-container</module>
    <module>codes/javacore-io</module>
    <module>codes/javacore-concurrent</module>
    <module>codes/javacore-effective</module>
    <module>codes/javacore-jvm</module>
    <module>codes/javacore-newjdk</module>
    <module>codes/javacore-utils</module>
    <module>codes/javacore-in-web</module>
    <module>codes/bytecode</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>21</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <lombok.version>1.18.30</lombok.version>
    <hutool-all.version>5.8.29</hutool-all.version>
    <spring-boot-dependencies.version>2.7.18</spring-boot-dependencies.version>
    <nashorn-core.version>15.4</nashorn-core.version>
    <cglib.version>3.3.0</cglib.version>
    <javassist.version>3.29.2-GA</javassist.version>
    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
    <junit.version>4.13.2</junit.version>
    <assertj-core.version>3.26.3</assertj-core.version>
    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>cn.hutool</groupId>
        <artifactId>hutool-all</artifactId>
        <version>${hutool-all.version}</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot-dependencies.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.openjdk.nashorn</groupId>
        <artifactId>nashorn-core</artifactId>
        <version>${nashorn-core.version}</version>
      </dependency>
      <dependency>
        <groupId>cglib</groupId>
        <artifactId>cglib</artifactId>
        <version>${cglib.version}</version>
      </dependency>
      <dependency>
        <groupId>org.javassist</groupId>
        <artifactId>javassist</artifactId>
        <version>${javassist.version}</version>
      </dependency>
      <dependency>
        <groupId>javax.annotation</groupId>
        <artifactId>javax.annotation-api</artifactId>
        <version>${javax.annotation-api.version}</version>
      </dependency>

      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj-core.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <encoding>${project.build.sourceEncoding}</encoding>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
